@@ -12,7 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>24.0.1</javafx.version>
-        <main.class>inventory.example.inventory_ms/login.login_app</main.class>
+        <main.class>login.Launcher</main.class>
     </properties>
 
     <dependencies>
@@ -21,6 +21,7 @@
             <artifactId>google-auth-library-oauth2-http</artifactId>
             <version>1.23.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -90,31 +91,21 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>${main.class}</mainClass>
-                    
-                    <jlinkImageName>image</jlinkImageName>
-                    <launcher>InventorySystem</launcher>
-                    
-                    <stripDebug>true</stripDebug>
-                    <compress>2</compress>
-                    <noHeaderFiles>true</noHeaderFiles>
-                    <noManPages>true</noManPages>
-                    
-                    <options>
-                        <option>--add-opens</option>
-                        <option>javafx.graphics/javafx.scene=org.controlsfx.controls</option>
-                        <option>--add-opens</option>
-                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
-                        <option>--add-opens</option>
-                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
-                    </options>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>${main.class}</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
 
@@ -127,8 +118,8 @@
                     <appVersion>1.0.0</appVersion>
                     <vendor>Intervein</vendor>
                     <destination>target/dist</destination>
-                    <module>${main.class}</module>
-                    <runtimeImage>target/image</runtimeImage>
+                    <mainJar>inventory_MS-1.0-SNAPSHOT.jar</mainJar>
+                    <mainClass>${main.class}</mainClass>
                     <winDirChooser>true</winDirChooser>
                     <winMenu>true</winMenu>
                     <winShortcut>true</winShortcut>
